--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "aws-sdk": "^2.188.0",
     "body-parser": "^1.17.2",
+    "buffer": "^5.6.0",
     "concurrently": "^3.5.0",
     "cookie-session": "^2.0.0-beta.2",
     "cors": "^2.8.5",
