--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "buffer": "^5.6.0",
     "concurrently": "^3.5.0",
     "cookie-session": "^2.0.0-beta.2",
+    "core-js": "^3.6.5",
     "cors": "^2.8.5",
     "express": "^4.15.3",
     "jest": "^22.1.4",
