--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest": "^26.0.1",
     "migrate-mongoose": "^4.0.0",
     "mongoose": "^5.9.16",
+    "node-gyp": "^5.1.1",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
