--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "migrate-mongoose": "^4.0.0",
     "mongoose": "^5.9.16",
     "node-gyp": "^5.1.1",
+    "node-gyp-build": "^4.2.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
