--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ cache:
     - node_modules
     - client/node_modules
 install:
-  - npm install
+  - npm ci
   - npm run build
 script:
   - nohup npm run start &
