--- a/client/package.json
+++ b/client/package.json
@@ -23,7 +23,8 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "utf-8-validate": "^5.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
