--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,7 @@ services:
 env:
   - NODE_ENV=ci PORT=3000
 cache:
-  directories:
-    - node_modules
-    - client/node_modules
+  npm: false
 install:
   - npm install
   - npm run build
