--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,11 @@ services:
 env:
   - NODE_ENV=ci PORT=3000
 cache:
-  npm: false
+  directories:
+    - node_modules
+    - client/node_modules
 install:
-  - npm install
+  - npm ci
   - npm run build
 script:
   - nohup npm run start &
