--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "axios": "^0.19.2",
     "materialize-css": "^1.0.0",
-    "node-gyp": "^5.1.1",
-    "node-gyp-build": "^4.2.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -23,8 +21,7 @@
     "redux": "^4.0.5",
     "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0",
-    "typescript": "^3.9.3",
-    "utf-8-validate": "^5.0.2"
+    "typescript": "^3.9.3"
   },
   "scripts": {
     "start": "react-scripts start",
