--- a/package.json
+++ b/package.json
@@ -19,26 +19,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.10.2",
     "aws-sdk": "^2.686.0",
     "body-parser": "^1.19.0",
-    "buffer": "^5.6.0",
     "concurrently": "^5.2.0",
-    "cookie-session": "^2.0.0-beta.2",
+    "cookie-session": "^1.4.0",
     "core-js": "^3.6.5",
-    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jest": "^26.0.1",
     "migrate-mongoose": "^4.0.0",
     "mongoose": "^5.9.16",
-    "node-gyp": "^5.1.1",
-    "node-gyp-build": "^4.2.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "path-parser": "^6.1.0",
     "puppeteer": "^3.2.0",
     "redis": "^3.0.2",
-    "utf-8-validate": "^5.0.2",
     "uuid": "^8.1.0"
   }
 }
