--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
-version:
-  - 12
+node_js:
+  - '12'
 dist: trusty
 services:
   - mongodb
@@ -12,7 +12,7 @@ cache:
     - node_modules
     - client/node_modules
 install:
-  - npm ci
+  - npm install
   - npm run build
 script:
   - nohup npm run start &
