--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,9 @@ cache:
     - client/node_modules
 install:
   - npm install
-  - npm run build
 script:
   - nohup npm run start &
   - sleep 3
   - npm run test
+after_script:
+  - npm run build
