--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,6 @@ cache:
     - client/node_modules
 install:
   - npm install
-  - npm run build
 script:
   - nohup npm run start &
   - sleep 3
@@ -21,3 +20,5 @@ script:
 include:
   - name: darwin
   os: osx
+afterscript:
+  - npm run build
