--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "jest": {
-    "testEnvironment": "node",
-    "setupFilesAfterEnv": [
-      "./tests/setup.js"
-    ]
+    "verbose": true,
+    "testURL": "http://localhost/",
+    "setupTestFrameworkScriptFile": "./tests/setup.js"
   },
   "scripts": {
     "start": "node index.js",
@@ -21,22 +20,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.10.2",
-    "aws-sdk": "^2.686.0",
-    "body-parser": "^1.19.0",
-    "concurrently": "^5.2.0",
-    "cookie-session": "^1.4.0",
-    "core-js": "^3.6.5",
-    "express": "^4.17.1",
-    "jest": "^24.9.0",
-    "migrate-mongoose": "^4.0.0",
-    "mongoose": "^5.9.16",
-    "nodemon": "^2.0.4",
+    "aws-sdk": "^2.687.0",
+    "body-parser": "^1.17.2",
+    "concurrently": "^3.5.0",
+    "cookie-session": "^2.0.0-beta.2",
+    "express": "^4.15.3",
+    "jest": "^22.1.4",
+    "migrate-mongoose": "^3.2.2",
+    "mongoose": "^4.11.1",
+    "nodemon": "^1.11.0",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "path-parser": "^6.1.0",
-    "puppeteer": "^3.2.0",
-    "redis": "^3.0.2",
-    "uuid": "^8.1.0"
+    "path-parser": "^2.0.2",
+    "puppeteer": "^1.0.0",
+    "redis": "^2.8.0",
+    "uuid": "^3.2.1"
   }
 }
