--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,8 @@ cache:
 install:
   - npm install
 script:
-  - nohup npm run start &
-  - sleep 3
+  # - nohup npm run start &
+  # - sleep 3
   - npm run test
 afterscript:
   - npm run build
