--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: node_js
 node_js:
   - '8'
 dist: trusty
+sudo: required
+addons:
+  chrome: stable
 services:
   - mongodb
   - redis-server
@@ -17,5 +20,3 @@ script:
   # - nohup npm run start &
   # - sleep 3
   - npm run test
-afterscript:
-  - npm run build
