--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,17 @@ dist: trusty
 services:
   - mongodb
   - redis-server
-before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 env:
   - NODE_ENV=ci PORT=3000
 cache:
   directories:
     - node_modules
     - client/node_modules
-install:
-  - npm install
-script:
+# install:
+#   - npm install
+beforescript:
   - nohup npm run start &
   - sleep 3
-  - npm run test
-afterscript:
   - npm run build
+script:
+  - npm run test
