--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ cache:
 #   - npm install
 beforescript:
   - npm install
-  # - nohup npm run start &
-  # - sleep 3
-  # - npm run build
+  - nohup npm run start &
+  - sleep 3
+  - npm run build
 script:
   - npm run test
