--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ beforescript:
   - npm install
   - nohup npm run start &
   - sleep 3
-  - npm run build
+  # - npm run build
 script:
   - npm run test
