--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
 node_js:
   - '12'
+matrix:
+  include:
+    - sudo: required
+    - os: osx
+      osx_image: xcode7.2
 dist: trusty
 sudo: required
 services:
@@ -17,7 +22,7 @@ cache:
 # beforescript:
 script:
   - npm install
-  # - nohup npm run start &
+  - nohup npm run start &
   # - sleep 3
   - npm run build
   - npm run test
