--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
   - redis-server
 env:
   - NODE_ENV=ci PORT=3000
+install: travis_wait 20 mvn install
 cache:
   directories:
     - node_modules
