--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ cache:
   directories:
     - node_modules
     - client/node_modules
-install:
-  - npm install
-beforescript:
-  - npm run build
-script:
-  - nohup npm run start &
-  - sleep 3
-  - npm run test
+# install:
+#   - npm install
+# beforescript:
+#   - npm run build
+# script:
+#   - nohup npm run start &
+#   - sleep 3
+# - npm run test
