--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
 #   - npm install
 # beforescript:
 #   - npm run build
-# script:
-#   - nohup npm run start &
-#   - sleep 3
-# - npm run test
+script:
+  - nohup npm run start &
+  - sleep 3
+  # - npm run test
