--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,11 @@ cache:
   directories:
     - node_modules
     - client/node_modules
-# install:
-#   - npm install
+install:
+  - npm install
 # beforescript:
-#   - npm run build
 script:
-  - nohup npm run start &
-  - sleep 3
-  # - npm run test
+  - npm run build
+  - npm run start
+  # - sleep 3
+  - npm run test
