--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.1",
+    "jest": "^22.1.4",
     "materialize-css": "^1.0.0",
     "react": "^16.0.0-alpha.13",
     "react-dom": "^16.0.0-alpha.13",
