--- a/client/package.json
+++ b/client/package.json
@@ -28,5 +28,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.12"
   }
 }
